feat(refactoring): introspection fixes
