# docs/openapi.json
@@ -2833,6 +2833,10 @@
           {
             "in": "query",
             "name": "mode"
+          },
+          {
+            "in": "query",
+            "name": "type"
           }
         ],
         "responses": {
@@ -3438,23 +3442,23 @@
         "parameters": [
           {
             "in": "query",
-            "name": "name"
+            "name": "page"
+          },
+          {
+            "in": "query",
+            "name": "size"
+          },
+          {
+            "in": "query",
+            "name": "query"
+          },
+          {
+            "in": "query",
+            "name": "mode"
           },
           {
             "in": "query",
             "name": "type"
-          },
-          {
-            "in": "query",
-            "name": "description"
-          },
-          {
-            "in": "query",
-            "name": "limit"
-          },
-          {
-            "in": "query",
-            "name": "offset"
           }
         ],
         "responses": {
